--- a/index.html
+++ b/index.html
@@ -4,5 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CMSC 207 Mini Project</title>
+    <link rel="stylesheet" href="https://use.typekit.net/lgo0bhg.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
+<body>
+    <header>
+        <div class="container">
+        <nav class="flex items-center space-between">
+            <div class="left">
+                <div class="branding">
+                    <img src="./images/maj.png" alt="">
+                </div>
+            </div>
+            <div class="right"> 
+                <button class="btn btn-primary">about me</button>
+                <button>interests</button>
+                <button>contact</button>
+            </div>
+
+
+        </nav>
+        </div>
+    </header>
+
+
+
+
+
+
+</body>
+
+
+
+
+
+
+
+
+
+</html>
