--- a/index.html
+++ b/index.html
@@ -10,22 +10,33 @@
 <body>
     <header>
         <div class="container">
-        <nav class="flex items-center space-between">
-            <div class="left">
-                <div class="branding">
-                    <img src="./images/maj.png" alt="">
+            <nav class="flex items-center space-between">
+                <div class="left">
+                    <div class="branding">
+                        <img src="./images/maj.png" alt="">
+                    </div>
                 </div>
-            </div>
-            <div class="right"> 
-                <button class="btn btn-primary">about me</button>
-                <button>interests</button>
-                <button>contact</button>
-            </div>
-
-
-        </nav>
+                <div class="right"> 
+                    <!-- <button class="btn btn-primary">about me</button>
+                    <button>interests</button>
+                    <button>contact</button> -->
+                    <a href="#">about me</a>
+                    <a href="#">interests</a>
+                    <a href="#">contact</a>
+                </div>
+            </nav>
         </div>
     </header>
+        <div class="hero flex items-center space-between">
+            <div class="left">
+                <h1>you can call me <span>aj.</span></h1><br><br><br>
+                <p>i don't usually take pictures of myself and i love alex<br>from the cartoon totally spies and i am somehow just<br>like her hence why its her photo here :> <br><br>aj is an abbreviation of my second and third name <br>i just turned 26 last january 9th, my pronouns are<br>she/her and i am queer!</p>
+            </div>
+            <div class="right">
+                <img src="./images/alex-bg-image.png" alt="">
+            </div>
+
+    </div>
 
 
 
