layouting hero page

--- a/index.html
+++ b/index.html
@@ -27,14 +27,15 @@
             </nav>
         </div>
     </header>
-        <div class="hero flex items-center space-between">
-            <div class="left">
-                <h1>you can call me <span>aj.</span></h1><br><br><br>
-                <p>i don't usually take pictures of myself and i love alex<br>from the cartoon totally spies and i am somehow just<br>like her hence why its her photo here :> <br><br>aj is an abbreviation of my second and third name <br>i just turned 26 last january 9th, my pronouns are<br>she/her and i am queer!</p>
-            </div>
-            <div class="right">
-                <img src="./images/alex-bg-image.png" alt="">
-            </div>
+    <div class="hero flex items-center space-between">
+        <div class="left">
+            <img src="./images/hi-bg-image.png" alt="">
+            <h1>you can call me <span>aj.</span></h1><br><br><br>
+            <p>i don't usually take pictures of myself and i love alex<br>from the cartoon totally spies and i am somehow just<br>like her hence why its her photo here :> <br><br>aj is an abbreviation of my second and third name,<br>i just turned 26 last january 9th, my pronouns are<br>she/her and i am queer!</p>
+        </div>
+        <div class="right justify-center">
+            <img src="./images/alex-bg-image.png" alt="">
+        </div>
 
     </div>
 
@@ -44,13 +45,4 @@
 
 
 </body>
-
-
-
-
-
-
-
-
-
 </html>
