--- a/index.html
+++ b/index.html
@@ -36,10 +36,32 @@
         <div class="right justify-center">
             <img src="./images/alex-bg-image.png" alt="">
         </div>
-
     </div>
-
-
+    <div class="interests">
+        <div class="myinterests">
+            <h1>my interests!</h1>
+        </div>
+        <!-- <div class="interestscontents flex justify-center">
+            <div class="left flex items-center space-between">
+                <div class="taeyeonleft">
+                    <img src="./images/taeyeon-bg-image.png" alt="">
+                </div>    
+                <div class="taeyeonright">
+                    <h1>taeyeon</h1><br>
+                    <p>i am ur typical fangirl who is into all<br>things kpop! i find it unhealthy but<br>healing at the same time. i know!<br>it does not make sense at all.<br><br>my ultimate fav artist is taeyeon<br>from girls' generation!<br><br>she has a concert on the 29th!<br>hit me up if ure going</p>
+                </div>
+            </div>
+            <div class="right flex items-center space-between">
+                <div class="wizardingleft">
+                    <h1>wizarding<br>world</h1><br>
+                    <p>i've been addicted to the<br>harry potter series ever since<br>i was a kid. i somehow<br>manage to love it even more<br>as i grow older. what a nerd.<br><br>here's my fav character,<br>prof. snape! fun fact,<br>we have the same birthday!</p>
+                </div>
+                <div class="wizardingright">
+                    <img src="./images/snape-bg-image.png" alt="">
+                </div>
+            </div>
+        </div>
+    </div> -->
 
 
 
