--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="myinterests">
             <h1>my interests!</h1>
         </div>
-        <!-- <div class="interestscontents flex justify-center">
+        <div class="interestscontents">
             <div class="left flex items-center space-between">
                 <div class="taeyeonleft">
                     <img src="./images/taeyeon-bg-image.png" alt="">
@@ -61,10 +61,7 @@
                 </div>
             </div>
         </div>
-    </div> -->
-
-
-
+    </div>
 
 </body>
 </html>
