--- a/index.html
+++ b/index.html
@@ -8,26 +8,25 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <header>
-        <div class="container">
-            <nav class="flex items-center space-between">
-                <div class="left">
-                    <div class="branding">
-                        <img src="./images/maj.png" alt="">
-                    </div>
-                </div>
-                <div class="right"> 
-                    <!-- <button class="btn btn-primary">about me</button>
-                    <button>interests</button>
-                    <button>contact</button> -->
-                    <a href="#">about me</a>
-                    <a href="#">interests</a>
-                    <a href="#">contact</a>
-                </div>
-            </nav>
+    <div class="container">
+        <div class="left">
+            <img src="./images/maj.png" alt="">
         </div>
-    </header>
-    <div class="hero flex items-center space-between">
+        <div class="right">
+            <!-- <div>
+                <a href="#">about me</a>
+                <a href="#">interests</a>
+                <a href="#">contact</a>
+            </div>  -->
+            <!-- <button class="btn btn-primary">about me</button>
+            <button>interests</button>
+            <button>contact</button> -->
+            <a href="#">about me</a>
+            <a href="#">interests</a>
+            <a href="#">contact</a>
+        </div>
+    </div>
+    <div class="about flex items-center space-between">
         <div class="left">
             <img src="./images/hi-bg-image.png" alt="">
             <h1>you can call me <span>aj.</span></h1><br><br><br>
@@ -59,6 +58,20 @@
                 <div class="wizardingright">
                     <img src="./images/snape-bg-image.png" alt="">
                 </div>
+            </div>
+        </div>
+    </div>
+    <div class="contact">
+        <div class="contactme">
+            <h1>contact me.</h1><br><br>
+            <p>you can connect with me thru on any of my socials below!</p>
+        </div>
+        <div class="contactcontents">
+            <div class="left">
+                <h1>@maegan.gif</h1>
+            </div>
+            <div class="right">
+                <h1>maeganalmirajean@gmail.com</h1>
             </div>
         </div>
     </div>
