nav buttons update

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="left">
             <img src="./images/maj.png" alt="">
         </div>
-        <div class="right">
+        <div class="right flex space-between">
             <!-- <div>
                 <a href="#">about me</a>
                 <a href="#">interests</a>
