scroll animation added

--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
             <!-- <button class="btn btn-primary">about me</button>
             <button>interests</button>
             <button>contact</button> -->
-            <a href="#">about me</a>
-            <a href="#">interests</a>
-            <a href="#">contact</a>
+            <a href="#about">about me</a>
+            <a href="#interests">interests</a>
+            <a href="#contact">contact</a>
         </div>
     </div>
-    <div class="about flex items-center space-between">
+    <div class="about flex items-center space-between" id="about">
         <div class="left">
             <img src="./images/hi-bg-image.png" alt="">
             <h1>you can call me <span>aj.</span></h1><br><br><br>
@@ -36,7 +36,7 @@
             <img src="./images/alex-bg-image.png" alt="">
         </div>
     </div>
-    <div class="interests">
+    <div class="interests" id="interests">
         <div class="myinterests">
             <h1>my interests!</h1>
         </div>
@@ -61,7 +61,7 @@
             </div>
         </div>
     </div>
-    <div class="contact">
+    <div class="contact" id="contact">
         <div class="contactme">
             <h1>contact me.</h1><br><br>
             <p>you can connect with me thru on any of my socials below!</p>
