burger button competed

--- a/index.html
+++ b/index.html
@@ -8,73 +8,90 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <div class="container">
-        <div class="left">
-            <img src="./images/maj.png" alt="">
+    <div class="site-main-wrapper">
+        <div class="burger">
+            <button class="burger-btn">
+                <img src="./images/SVG/menu_24dp_25092E_FILL0_wght400_GRAD0_opsz24.svg" alt="">
+            </button>
         </div>
-        <div class="right flex space-between">
-            <!-- <div>
-                <a href="#">about me</a>
-                <a href="#">interests</a>
-                <a href="#">contact</a>
-            </div>  -->
-            <!-- <button class="btn btn-primary">about me</button>
-            <button>interests</button>
-            <button>contact</button> -->
-            <a href="#about">about me</a>
-            <a href="#interests">interests</a>
-            <a href="#contact">contact</a>
+        <div class="mobile-nav">
+            <button class="close">
+                <img src="./images/SVG/close_24dp_25092E_FILL0_wght400_GRAD0_opsz24.svg" alt="">
+            </button>
+            <ul>
+                <li><a href="#">about</a></li>
+                <li><a href="#">interests</a></li>
+                <li><a href="#">contact</a></li>
+            </ul>
         </div>
-    </div>
-    <div class="about flex items-center space-between" id="about">
-        <div class="left">
-            <img src="./images/hi-bg-image.png" alt="">
-            <h1>you can call me <span>aj.</span></h1><br><br><br>
-            <p>i don't usually take pictures of myself and i love alex<br>from the cartoon totally spies and i am somehow just<br>like her hence why its her photo here :> <br><br>aj is an abbreviation of my second and third name,<br>i just turned 26 last january 9th, my pronouns are<br>she/her and i am queer!</p>
-        </div>
-        <div class="right justify-center">
-            <img src="./images/alex-bg-image.png" alt="">
-        </div>
-    </div>
-    <div class="interests" id="interests">
-        <div class="myinterests">
-            <h1>my interests!</h1>
-        </div>
-        <div class="interestscontents">
-            <div class="left flex items-center space-between">
-                <div class="taeyeonleft">
-                    <img src="./images/taeyeon-bg-image.png" alt="">
-                </div>    
-                <div class="taeyeonright">
-                    <h1>taeyeon</h1><br>
-                    <p>i am ur typical fangirl who is into all<br>things kpop! i find it unhealthy but<br>healing at the same time. i know!<br>it does not make sense at all.<br><br>my ultimate fav artist is taeyeon<br>from girls' generation!<br><br>she has a concert on the 29th!<br>hit me up if ure going</p>
-                </div>
-            </div>
-            <div class="right flex items-center space-between">
-                <div class="wizardingleft">
-                    <h1>wizarding<br>world</h1><br>
-                    <p>i've been addicted to the<br>harry potter series ever since<br>i was a kid. i somehow<br>manage to love it even more<br>as i grow older. what a nerd.<br><br>here's my fav character,<br>prof. snape! fun fact,<br>we have the same birthday!</p>
-                </div>
-                <div class="wizardingright">
-                    <img src="./images/snape-bg-image.png" alt="">
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="contact" id="contact">
-        <div class="contactme">
-            <h1>contact me.</h1><br><br>
-            <p>you can connect with me thru on any of my socials below!</p>
-        </div>
-        <div class="contactcontents">
+        <div class="container" id="main-nav">
             <div class="left">
-                <h1>@maegan.gif</h1>
+                <img src="./images/maj.png" alt="">
             </div>
-            <div class="right">
-                <h1>maeganalmirajean@gmail.com</h1>
+            <div class="right flex space-between">
+                <!-- <div>
+                    <a href="#">about me</a>
+                    <a href="#">interests</a>
+                    <a href="#">contact</a>
+                </div>  -->
+                <!-- <button class="btn btn-primary">about me</button>
+                <button>interests</button>
+                <button>contact</button> -->
+                <a href="#about">about me</a>
+                <a href="#interests">interests</a>
+                <a href="#contact">contact</a>
+            </div>
+        </div>
+        <div class="about flex items-center space-between" id="about">
+            <div class="left">
+                <img src="./images/hi-bg-image.png" alt="">
+                <h1>you can call me <span>aj.</span></h1><br><br><br>
+                <p>i don't usually take pictures of myself and i love alex<br>from the cartoon totally spies and i am somehow just<br>like her hence why its her photo here :> <br><br>aj is an abbreviation of my second and third name,<br>i just turned 26 last january 9th, my pronouns are<br>she/her and i am queer!</p>
+            </div>
+            <div class="right justify-center">
+                <img src="./images/alex-bg-image.png" alt="">
+            </div>
+        </div>
+        <div class="interests" id="interests">
+            <div class="myinterests">
+                <h1>my interests!</h1>
+            </div>
+            <div class="interestscontents">
+                <div class="left flex items-center space-between">
+                    <div class="taeyeonleft">
+                        <img src="./images/taeyeon-bg-image.png" alt="">
+                    </div>    
+                    <div class="taeyeonright">
+                        <h1>taeyeon</h1><br>
+                        <p>i am ur typical fangirl who is into all<br>things kpop! i find it unhealthy but<br>healing at the same time. i know!<br>it does not make sense at all.<br><br>my ultimate fav artist is taeyeon<br>from girls' generation!<br><br>she has a concert on the 29th!<br>hit me up if ure going</p>
+                    </div>
+                </div>
+                <div class="right flex items-center space-between">
+                    <div class="wizardingleft">
+                        <h1>wizarding<br>world</h1><br>
+                        <p>i've been addicted to the<br>harry potter series ever since<br>i was a kid. i somehow<br>manage to love it even more<br>as i grow older. what a nerd.<br><br>here's my fav character,<br>prof. snape! fun fact,<br>we have the same birthday!</p>
+                    </div>
+                    <div class="wizardingright">
+                        <img src="./images/snape-bg-image.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="contact" id="contact">
+            <div class="contactme">
+                <h1>contact me.</h1><br><br>
+                <p>you can connect with me thru on any of my socials below!</p>
+            </div>
+            <div class="contactcontents">
+                <div class="left">
+                    <h1>@maegan.gif</h1>
+                </div>
+                <div class="right">
+                    <h1>maeganalmirajean@gmail.com</h1>
+                </div>
             </div>
         </div>
     </div>
-
+<script src="./app.js"></script>    
 </body>
 </html>
