--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
                 <img src="./images/SVG/close_24dp_25092E_FILL0_wght400_GRAD0_opsz24.svg" alt="">
             </button>
             <ul>
-                <li><a href="#">about</a></li>
-                <li><a href="#">interests</a></li>
-                <li><a href="#">contact</a></li>
+                <li><a href="#about" class="click1">about</a></li>
+                <li><a href="#interests" class="click2">interests</a></li>
+                <li><a href="#contacts" class="click3">contact</a></li>
             </ul>
         </div>
         <div class="container" id="main-nav">
