--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <ul>
                 <li><a href="#about" class="click1">about</a></li>
                 <li><a href="#interests" class="click2">interests</a></li>
-                <li><a href="#contacts" class="click3">contact</a></li>
+                <li><a href="#contact" class="click3">contact</a></li>
             </ul>
         </div>
         <div class="container" id="main-nav">
